# DevTools

./: .gitignore  README.md  enneatao_a1c95592_unhidden.html
ETH-EventListen/: main.go
Linux/: install_zsh.sh
ai/: README.md
ai/skills/: MANIFEST.md
ai/templates/: 寓言概念解释写作.prompt.md
docker/cosmos/: Dockerfile
docker/geth_base/: build.sh  docker部署以太坊Geth.md  geth_base.dockerfile  geth_base_init.sh  go_base.dockerfile  go_base_init.sh
docker/go_base/: build.sh  docker准备go基础环境.md  go_base_init.sh
docs/: mentor-research-os-design.md  openclash-mihomo-codex-network-fix-2026-06-24.md
geth_start_poa/: genesis.json  geth_ctl.sh  geth_init.sh  geth_start.sh  pwd.txt  启动链流程.md
nas/: R2S旁路由代理去广告配置教程.md  bt.py  clash-r2s-enriched-low-traffic.yaml  clash-r2s-enriched.yaml  clash-r2s-legacy.yaml  tmp.enriched.low-traffic.yaml  tmp.enriched.yaml  tmp.sh  tmp.yaml  tracker_processed.txt
tools/codex-login-bridge/: README.md  codex-login-bridge.sh
tools/macsync/: .gitignore  README.md  pyproject.toml
tools/macsync/docs/: personal-knowledge-使用说明.md  中文操作手册.md
tools/macsync/examples/: macsync.yml
tools/macsync/packaging/homebrew/: macsync.rb
tools/macsync/scripts/: build-bin.sh  e2e-temp-git-sync.sh  e2e-temp-workspace-sync.sh  install-bin.sh  install-mac-node.sh  install-server.sh
tools/macsync/src/macsync/: cli.py  config.py  git_ops.py  gitea.py  server.py  server_cli.py  workspace.py
tools/macsync/tests/: test_cli.py  test_config.py  test_git_ops.py  test_onboard.py  test_server.py  test_workspace.py
zip/: unzip.sh  zip_ict.sh
(+35 files in other folders)
